@@ -1,3 +1,9 @@
+2011-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/find-func.el (find-function-C-source): Only set
+	find-function-C-source-directory after checking that we found a source
+	file there (bug#9440).
+
 2011-09-06  Alan Mackenzie  <acm@muc.de>
 
 	* isearch.el (isearch-other-meta-char): Wherever a key list is
